[workspace]

members = [
    "android-example/rust",
    "surfman",
]

[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }

gaol = { git = "https://github.com/tomaka/gaol", branch = "hacky-wasi" }
# This is here to dedupe winapi since mio 0.6 is still using winapi 0.2.
mio = { git = "https://github.com/tomaka/mio", branch = "0.6-wasi" }
net2 = { git = "https://github.com/tomaka/net2-rs", branch = "wasi-build" }
winit = { git = "https://github.com/tomaka/winit", branch = "0.19.3-hacky-wasi" }
